mejora en barra de progreso

--- a/src/app/modules/tracking/tracking-view/tracking-view.template.html
+++ b/src/app/modules/tracking/tracking-view/tracking-view.template.html
@@ -30,7 +30,7 @@
     <!-- Timeline principal de tracking -->
     <div class="box-container">
         <app-tracking-stepper-view [steps]="invoice?.trackingSteps"
-            [orderDetails]="invoice?.orderProducts"></app-tracking-stepper-view>
+            [orderDetails]="stepperOrderDetails"></app-tracking-stepper-view>
     </div>
 
     <!-- Detalles de entrega/pickup - mismo componente que en listado para consistencia -->
