se integra la badge con cantidad de pedidos entregados

--- a/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.scss
+++ b/src/app/modules/tracking/tracking-view/tracking-stepper-view/tracking-stepper-view.scss
@@ -29,7 +29,7 @@
                     display: -webkit-box;
                     -webkit-line-clamp: 3;
                     -webkit-box-orient: vertical;
-                    overflow: hidden;
+                    overflow: visible;
                     font-size: 13px;
                     /* Aumentado de 10px a 13px */
                     line-height: 1.2;
